--- a/PlantainJam/Assets/Scripts/AI/AI.asmdef
+++ b/PlantainJam/Assets/Scripts/AI/AI.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "AI"
+    "name": "AI",
+    "rootNamespace": "",
+    "references": [
+        "Pathfinding"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
