--- a/PlantainJam/Assets/Scripts/AI/AI.asmdef
+++ b/PlantainJam/Assets/Scripts/AI/AI.asmdef
@@ -2,7 +2,8 @@
     "name": "AI",
     "rootNamespace": "",
     "references": [
-        "Pathfinding"
+        "Pathfinding",
+        "AstarPathfindingProject"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
